gcc/testsuite/rust/compile/macros/mbe/macro-issue2092.rs
macro_rules! foo {
    // { dg-error "does not take a separator" "#2092" { target *-*-*} .+1 }
    ($(a),?) => {};
}
